--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt": "~0.4.2",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-stylus": "~0.13.1"
+    "grunt-contrib-stylus": "~0.13.1",
+    "grunt-contrib-concat": "~0.3.0"
   }
 }
